# Vertex-Cover

./: CMakeLists.txt  README.md  a1ece650.py  record.csv
a1/: README.md  streetDB.py
a2/: README.md  Shortest_path.cpp
a3/: CMakeLists.txt  IPC.cpp  README.md  StreetDB.py
a4/: README.md
project/: CMakeLists.txt  GraphGen.txt  README.md
src/: CNF_SAT.cpp  Shortest_path.cpp  algorithms.cpp  rgen.cpp
